[package]
name = "bluez-dbus"
version = "0.1.0"
authors = ["Hideaki IWASE <i.poper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.8.1"
tokio = { version = "0.2.11", features = ["rt-threaded", "rt-util", "time"] }
dbus-tokio = "0.5.1"

[features]
default=[]
sync=[]
local=[]

